Fix caret vertical alignment for typewriter effect

--- a/style.css
+++ b/style.css
@@ -172,16 +172,20 @@ ul {
   line-height: 1.6;
   display: flex;
   align-items: baseline;
+  flex-wrap: wrap;
 }
 
 .caret {
   display: inline-block;
   width: 2px;
-  height: 1.1em;
+  height: 1em;
   background: #2563eb;
-  margin-left: 2px;
+  margin-left: 1px;
   animation: blink-caret 1s step-end infinite;
-  vertical-align: text-bottom;
+  vertical-align: baseline;
+  position: relative;
+  top: 0.15em;
+  flex-shrink: 0;
 }
 
 @keyframes blink-caret {
